--- a/public/index.html
+++ b/public/index.html
@@ -1,88 +1,135 @@
 <!DOCTYPE html><html><head><link rel="stylesheet" type="text/css" href="https://devleague-resumes.airshipcms.io/assets/styles/default.css"><link rel="stylesheet" type="text/css" href="styles.css"></head>
-<h1 id="andrea-takamiya">Andrea Takamiya</h1>
+<h1 id="steven-cable-e-i-t-">Steven Cable, E.I.T.</h1>
 <ol>
-<li>123 Manoa Drive Honolulu, HI 96822</li>
-<li>(808) 555-5555</li>
-<li><a href="https://github.com/andimiya">https://github.com/andimiya</a></li>
-<li><a href="linkedin-url">linkedin-url</a></li>
+<li>Steven.Cable12@gmail.com</li>
+<li>(360) 790-1927</li>
+<li><a href="Github">https://github.com/stevencable</a></li>
+<li><a href="LinkedIn">https://linkedin.com/in/stevencable</a></li>
 </ol>
 <h2 id="objective">Objective</h2>
-<p>I am a web developer...(what profession are you seeking?)</p>
+<p>Seeking to resolve my promise to make the world a better place, one commit at a time.</p>
 <h2 id="development-experience">Development Experience</h2>
-<h3 id="final-project-name-1">Final Project Name 1</h3>
-<h4 id="-https-github-com-username-project-https-github-com-username-project-"><a href="https://github.com/username/project">https://github.com/username/project</a></h4>
-<h5 id="march-2017">March 2017</h5>
+<h3 id="stratospeer">StratosPeer</h3>
+<h4 id="-https-github-com-edsperanto-stratospeer-stratospeer-"><a href="StratosPeer">https://github.com/edsperanto/stratospeer</a></h4>
+<h5 id="may-2017">May 2017</h5>
 <ul>
-<li>Describe the project.</li>
-<li>What did you contribute?</li>
-<li>What were the outcomes (if any) of this project?</li>
+<li>StratosPeer will aggregate all your files across supported cloud services providing quick and easy access, all right from our desktop application. Application implements React Redux,CSS3 with SASS, Sequelize, Express, NodeJS, Redis, and PostreSQL wrapped in Electron from Atom.io.  </li>
 </ul>
-<h3 id="hackathon-project-name-2">Hackathon Project Name 2</h3>
-<h4 id="-http-url-com-http-url-com-"><a href="http://url.com">http://url.com</a></h4>
+<p><strong>My Contributions:</strong></p>
+<ul>
+<li>Implemented Github API with OAuth2</li>
+<li>Server side RESTful routing using Express and Sequelize</li>
+<li>Data aggregation, parsing, and formatting for front end React  </li>
+<li>Fuzzy Filter Search functionality</li>
+<li>Electron packaging</li>
+<li>Current deployed version supports <code>Github</code> and <code>Box.com</code> services - with more on the way!</li>
+</ul>
+<h3 id="express-gallery">Express Gallery</h3>
+<h4 id="-https-github-com-stevencable-express-gallery-express-gallery-"><a href="Express Gallery">https://github.com/StevenCable/express-gallery</a></h4>
 <h5 id="march-2017">March 2017</h5>
 <ul>
-<li>Describe the project.</li>
-<li>What did you contribute?</li>
-<li>What were the outcomes (if any) of this project?</li>
+<li>A multi-user photo gallery using Express, Sequelize, HTML5 with Handlebars, and CSS3 with SASS C.R.U.D. web application. All data stored on PostgreSQL. </li>
+<li>User profiles maintain personal photos or access to entire gallery of all users</li>
+<li>Authorization at login through Passport and bcrypt with salt</li>
+<li>Implemented Admin role with elevated priviledges</li>
+</ul>
+<h3 id="kanban-board-with-react">KanBan Board with React</h3>
+<h4 id="-https-github-com-stevencable-react-kanban-kanban-board-"><a href="KanBan Board">https://github.com/StevenCable/React-Kanban</a></h4>
+<h5 id="march-2017">March 2017</h5>
+<ul>
+<li>A To-Do taskboard using React Redux with RESTful API routing via Express</li>
+<li>PostgreSQL for user database through Sequelize </li>
+<li>User profiles maintain personal photos or access to entire gallery of all users</li>
+<li>Authorization at login through Passport and bcrypt with salt</li>
+<li>Implemented Admin role with elevated priviledges</li>
+</ul>
+<h3 id="alexa-theme-r">Alexa Theme-r</h3>
+<h4 id="-https-github-com-edsperanto-att-alexa-themer-alexa-theme-r-"><a href="Alexa Theme-r">https://github.com/edsperanto/att--alexa-themer</a></h4>
+<h5 id="march-2017-at-t-48hr-hack-a-thon">March 2017 - AT&amp;T 48hr Hack-a-Thon</h5>
+<ul>
+<li>Alexa Simulator with the ability to detect specific users by Phone ID and play a specific (user set) theme song unique to each user. Have your own theme song whenever you come home and have Simlexa greet you! </li>
+</ul>
+<p><strong>My Contributions:</strong>  </p>
+<ul>
+<li>Generate project backbone structure for frontend/backend </li>
+<li>Implement: expressJS, initial server structure using Sequelize and Express</li>
+<li>Authentication checks</li>
+</ul>
+<h3 id="adware-waave">Adware-WAAVE</h3>
+<h4 id="-https-github-com-debinger-adware-waves-waave-"><a href="WAAVE">https://github.com/DEbinger/adware-waves</a></h4>
+<h5 id="january-2017-global-game-jam-hack-a-thon">January 2017 - Global Game Jam Hack-a-Thon</h5>
+<ul>
+<li>A game that loads pop ups in intervals/set timeouts to your workstation. Once the ad has fully resolved it will crash your work station and plug it&#39;s product for good measure! </li>
+</ul>
+<h3 id="wellthisisfrustrating">WellThisIsFrustrating</h3>
+<h4 id="-https-github-com-debinger-wellthisisfrustrating-wellthisisfrustrating-"><a href="WellThisIsFrustrating">https://github.com/DEbinger/WellThisIsFrustrating</a></h4>
+<h5 id="january-2017-ssh-hack-a-thon">January 2017 - SSH Hack-a-Thon</h5>
+<ul>
+<li>Google Chrome Extension that does it&#39;s very best to make your experience on the internet it&#39;s very worst. </li>
 </ul>
 <h2 id="professional-experience">Professional Experience</h2>
-<h3 id="online-experience-manager">Online Experience Manager</h3>
-<h4 id="hawaiian-airlines-honolulu">Hawaiian Airlines Honolulu</h4>
-<h5 id="hi-2014-present">HI 2014 – Present</h5>
+<h3 id="project-manager-general-contracting-for-construction-">Project Manager (General Contracting for Construction)</h3>
+<h4 id="nan-inc-">Nan, Inc.</h4>
+<h5 id="honolulu-hawaii-2013-present">Honolulu, Hawaii 2013 – Present</h5>
 <ul>
-<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus feugiat metus orci, vitae egestas sapien tincidunt ac.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus feugiat metus orci, vitae egestas sapien tincidunt ac.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus feugiat metus orci, vitae egestas sapien tincidunt ac.</li>
+<li>Project Manager - Pacific Air Force Headquarters Renovation Phase 6, Hickam AFB, HI ~ $6M</li>
+<li>Project Manager - Facility Modifications for P861, Kaneohe Marine Corps Base, HI ~ $42M</li>
+<li>Asst. Quality Control Manager - Pacific Air Force Headquarters Renovation Phase 5, Hickam AFB, HI ~ $45M</li>
+<li>Quality Control Manager - Pacific Air Force Headquarters Renovation Phase 4, Hickam AFB, HI ~ $18M</li>
 </ul>
 <h2 id="education">Education</h2>
 <h3 id="devleague">DevLeague</h3>
-<h4 id="explanation-of-what-this-is">Explanation of what this is</h4>
-<h5 id="jan-june-2017">Jan - June 2017</h5>
-<h3 id="bachelor-of-arts-in-business-administration-">Bachelor of Arts in Business Administration </h3>
-<h4 id="concentration-in-marketing-and-international-business-">Concentration in Marketing and International Business </h4>
-<h4 id="cumulative-gpa-3-74">Cumulative GPA: 3.74</h4>
-<h5 id="university-of-oregon-2005-2007">University of Oregon, 2005 – 2007</h5>
-<h5 id="university-of-hawaii-at-manoa-2008-2009-">University of Hawaii at Manoa , 2008 – 2009 </h5>
+<h4 id="fast-paced-and-immersive-full-stack-javascript-web-development-mentorship-program-topics-include-work-flows-and-version-management-strategies-server-side-development-and-integration-with-both-sql-and-nosql-databases-front-end-frameworks-and-styling-">Fast paced, and immersive full-stack Javascript web development mentorship program. Topics include work flows and version management strategies, server side development and integration with both SQL and noSQL databases, front end frameworks and styling.</h4>
+<h5 id="september-2016-may-2017">September 2016 - May 2017</h5>
+<h3 id="bachelor-of-science-in-mechanical-engineering">Bachelor of Science in Mechanical Engineering</h3>
+<h4 id="-minor-in-business-administration-"><strong>Minor in Business Administration </strong></h4>
+<h4 id="cumulative-gpa-3-5">Cumulative GPA: 3.5</h4>
+<h5 id="saint-martin-s-university-2006-2011-">Saint Martin&#39;s University 2006 – 2011 </h5>
+<h2 id="_i-played-collegiate-sports-and-was-a-team-captain-while-hitting-dean-s-list-n-shit-is-this-relevant-anymore-_"><em>I played Collegiate Sports and was a Team captain while hitting Dean&#39;s List n shit. Is this relevant anymore?</em></h2>
 <h2 id="technical-skills">Technical Skills</h2>
 <h3 id="languages">Languages</h3>
 <ul>
 <li>JavaScript</li>
 <li>HTML5</li>
-<li>CSS3</li>
 <li>SQL</li>
+<li>noSQL</li>
+<li>CSS3</li>
 </ul>
 <h3 id="web-skills">Web Skills</h3>
 <ul>
 <li>Responsive/Mobile First Web Development</li>
-<li>Test/Behavior Driven Development</li>
+<li>API Integration (GoogleDrive, Github, Box.com, Instagram, Reddit)</li>
 <li>Relational - and Non-Relational Database Modeling </li>
+<li>OAuth2 integration</li>
 <li>User Authentication</li>
-<li>API Integration</li>
+<li>Google Chrome Extensions</li>
 </ul>
 <h3 id="frontend-proficiencies">Frontend Proficiencies</h3>
 <ul>
+<li>JavaScript</li>
 <li>HTML5</li>
 <li>CSS3</li>
-<li>JavaScript</li>
 <li>ES6</li>
 <li>React</li>
 <li>Redux</li>
-<li>Angular</li>
-<li>D3</li>
+<li>Handlebars</li>
+<li>Electron</li>
 <li>SASS</li>
+<li>Angular</li>
 </ul>
 <h3 id="server-side-proficiencies">Server-Side Proficiencies</h3>
 <ul>
 <li>NodeJS</li>
 <li>Express</li>
-<li>Jade</li>
-<li>Sequelize/Mongoose ORM</li>
-<li>GraphQl</li>
+<li>Sequelize</li>
+<li>OAuth2</li>
+<li>Passport</li>
+<li>bcrypt</li>
 </ul>
 <h3 id="database-proficiencies">Database Proficiencies</h3>
 <ul>
 <li>PostgreSQL </li>
-<li>MongoDB</li>
+<li>Redis</li>
 </ul>
 <h3 id="workflow-testing-utilities">Workflow/Testing Utilities</h3>
 <ul>
@@ -94,16 +141,7 @@
 </ul>
 <h3 id="business-development">Business Development</h3>
 <ul>
-<li>Sitecore CMS ( Sitecore Certified)</li>
-<li>Sitecore OMS (Sitecore Certified)</li>
-<li>Sitecore DMS (Sitecore Certified)</li>
-<li>Adobe Sitecatalyst (Omniture)</li>
-<li>Adobe Test &amp; Target</li>
-<li>Farelogix Merchandising System Microsoft Sharepoint CMS</li>
-<li>Web layouts and wire-framing</li>
-<li>Adobe Photoshop CS6</li>
-<li>Adobe Illustrator CS6</li>
-<li>Google AdWords</li>
+<li>I should put something else here. Project Management stuff or something</li>
 </ul>
 
 </html>
